<resources>
    <string name="app_name">Leona</string>
    <string name="fb_id">1881321695460454</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="alert_no_gps"> Please turn on your device GPS</string>
    <string name="no.storage.permission">Storage permission allows us to access storage to save

images and to upload profile pictures. Please allow in App Settings for additional functionality.

</string>
    <string name="no_callphone">Call Phone permission allows us to call. Please allow in App

Settings for additional functionality.</string>
    <string name="error">Error</string>
    <string name="title_activity_language_screen">LanguageScreen</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_prefe">Preferences</string>
    <string name="title_nearby">Near By</string>
    <string name="title_resturent">Restaurants</string>
    <string name="title_settings">Settings</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_login">Login</string>
    <string name="fpwd_msg">Enter your email below to receive your </string>
    <string name="fpwd_msg1">Password Reset Instructions</string>
    <string name="send_instruc"> Send Instructions </string>
    <string name="fblogin">Login with facebook</string>
    <string name="fpwd">Forgot password!</string>
    <string name="email">Email Address</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="pwd">Password</string>
    <string name="signup">Signup</string>
    <string name="alreadyhaveac">Already have an account ? <u>LOGIN </u></string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="home_tuto_des">In Home screen you can see all the discounts available in Leona. You can share the discounts, Search the discounts available. You can also notified with new discounts posted.
</string>
    <string name="nearby_tuto_des">In this screen you can see all the nearby restaurants based on the preferences and distance set.You can also share the restaurant and view the offers available for a particular restaurant.</string>
    <string name="discount_tuto_des">Here you can see the detailed view of discounts. You can favorite and share the discount from this screen. Map is available which redirects to Google map to view the location of the discount.</string>
    <string name="restaurant_tuto_des">In this screen you can see restaurant details, Address of the restaurant, timings of the restaurant and map to locate the restaurant. Here you can also view the discounts offered by this restaurant.</string>
    <string name="footer_tuto_des">Home - See all the available discounts .
Preferences - View all the discounts based on the preferences and distance set .
Nearby - See all the nearby restaurants based on the preferences and distance set .
Restaurants - View all the restaurants available.
Settings - User can update details. </string>
    <string name="home_tuto_title">Home</string>
    <string name="nearby_tuto_title">Nearby</string>
    <string name="discount_tuto_title">Discount Details</string>
    <string name="restaurant_tuto_title">Restaurant Details</string>
    <string name="footer_tuto_title">Footer</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="preferences_msg">Enter your preferences Maximum of 10</string>
    <string name="next">Next</string>
    <string name="title_activity_radius">Radius</string>
    <string name="select_distance">Select Distance</string>
    <string name="save">Save</string>
    <string name="validate_email">Please enter your Email address </string>
    <string name="validate_valid_email">Please enter a valid Email address</string>
    <string name="validate_password">Please enter Password</string>
    <string name="validate_location">Please enter Location</string>
    <string name="validate_password_spaces">Password do not accept spaces</string>
    <string name="validate_pwd_6"> Please enter a password with at least 6 characters</string>
    <string name="validate_fname">Please enter Firstname</string>
    <string name="validate_lname">Please enter Lastname</string>
    <string name="validate_pref_no">Please choose the preferences</string>
    <string name="validate_pref_min">Please choose atleast 2 preferences</string>
    <string name="validate_pref_Max"> Maximum 10 preferences Only</string>
    <string name="validate_radius_min">Please select the distance range</string>
    <string name="radius_min">0m</string>
    <string name="radius_max">2Km</string>
    <string name="logout_msg">Do you want to Logout?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="sort">Sort</string>
    <string name="favourite">favourite</string>
    <string name="offers">offers</string>
    <string name="title_activity_discount_details">DiscountDetails</string>
    <string name="update">Update</string>
    <string name="applink"><b>Check out the amazing discount App \'Leona\' </b><u> https://play.google.com/store/apps/details?id=com.leona</u></string>
    <string name="link_app"><u> https://play.google.com/store/apps/details?id=com.leona &amp; Install Leona app to get more updates</u></string>
    <string name="preferences">Preferences</string>
    <string name="radius">Radius</string>
    <string name="terms_amp_condtions"><![CDATA[Terms & Condtions]]></string>
    <string name="help">Help</string>
    <string name="title_activity_profile_update">Profile Update</string>
    <string name="title_activity_restarunt_details">RestaruntDetails</string>
    <string name="location">Location</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_terms_conditions">Terms&amp;Conditions</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_my_favourites">Favourites</string>
    <string-array name="info_ques_array">
        <item>dummy</item>
        <item>Where is my order?</item>
        <item>Are there any discounts available at FoodinBag.in right now?</item>
        <item>dummy</item>
        <item>How to order online at FoodinBag?</item>
        <item>How long does it take for my order to get delivered?</item>
        <item>What are the delivery costs?</item>
        <item>How can I pay for my order?</item>
        <item>Cash on Delivery</item>
        <item>Credit Card</item>
        <item>Online Banking</item>
        <item>Why is ordering online better than ordering by phone?</item>
        <item>dummy</item>
        <item>What is FoodinBag?</item>
        <item>How can I see all restaurants?</item>
        <item>dummy</item>
        <item>I don’t remember my password</item>
        <item>What are the advantages of an account at FoodinBag.in?</item>
        <item>Do you want yourself listed on foodinBag?</item>
    </string-array>
</resources>