<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.leona.registration.Radius"
    android:background="@color/bg_clor"
    tools:showIn="@layout/activity_radius">


    <LinearLayout
        android:id="@+id/percentage_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_15dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/radius_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_distance"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_15dp"
            android:textSize="@dimen/size_15dp" />




        <com.leona.widget.DiscreteSeekBar
            android:id="@+id/distance_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            app:dsb_indicatorColor="@color/white"
            app:dsb_max1="2000"
            app:dsb_min="0"
            app:dsb_scrubberHeight="2dp"
            app:dsb_indicatorTextAppearance="@color/gray"
            app:dsb_progressColor="@color/white"
            app:dsb_trackColor="@color/white"
            app:dsb_rippleColor="@color/white" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/radius_min"
                android:textColor="@color/white"
                android:textSize="@dimen/size_15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/radius_max"
                android:textColor="@color/white"
                android:textSize="@dimen/size_15dp"  />
        </RelativeLayout>



        <Button
android:id="@+id/content_radious_save_btn"
            android:layout_margin="@dimen/margin_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcorners"
            android:text="@string/next"
            android:textSize="@dimen/size_22dp"
            />

    </LinearLayout>

</RelativeLayout>
