<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.leona.registration.ForgotPassword"
    android:background="@color/bg_clor"
    tools:showIn="@layout/activity_forgot_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_22dp"
            android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_15dp"
                android:text="@string/fpwd_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/size_15dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_2dp"
                android:text="@string/fpwd_msg1"
                android:textColor="@color/white"
                android:textSize="@dimen/size_15dp" />



            <android.support.design.widget.TextInputLayout style="@style/textinputlayouttheme">

                <EditText
                    android:id="@+id/activity_fpwd_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/email"
                    android:drawablePadding="@dimen/size_10dp"
                    android:hint="@string/email"
                    android:inputType="textNoSuggestions"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/activity_fpwd_btn"
                style="@style/textviewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/size_24dp"
                android:paddingLeft="@dimen/size_22dp"
                android:paddingRight="@dimen/size_22dp"

                android:background="@drawable/roundedcorners"
                android:text="@string/send_instruc"
                android:textColor="@color/gray"
                android:textSize="@dimen/size_22dp" />





        </LinearLayout>


    </ScrollView>

</RelativeLayout>