<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.leona.home.ProfileUpdate"
    android:orientation="vertical"
    android:background="@color/white"
    tools:showIn="@layout/activity_profile_update">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


         <RelativeLayout
             android:id="@+id/content_profile_container_rl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">


             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/bg_profile"/>


             <ImageView
                 android:id="@+id/content_profile_update_pic_iv"

                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:src="@mipmap/profile"
                 android:layout_centerInParent="true"/>

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="35dp"
                 android:src="@mipmap/edit"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"/>


         </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_15dp"
                android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                style="@style/textinputlayouttheme1">

                <TextView
                    android:id="@+id/content_prof_update_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"


                    android:drawableLeft="@mipmap/icn_email"
                    android:textColorHint="@color/bg_clor"
                    android:drawablePadding="@dimen/size_10dp"
                    android:textColor="@color/bg_clor"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                style="@style/textinputlayouttheme1">

                <EditText
                    android:id="@+id/content_prof_update_fname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fname"
                    android:inputType="textPersonName"
                    android:maxLength="@integer/char_length"
                    android:maxLines="1"

                    android:drawablePadding="@dimen/size_10dp"
                    android:drawableLeft="@mipmap/icn_user"
                    android:textColor="@color/bg_clor"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                style="@style/textinputlayouttheme1">

                <EditText
                    android:id="@+id/content_prof_update_lname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lname"
                    android:maxLength="@integer/char_length"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@mipmap/icn_user"
                    android:drawablePadding="@dimen/size_10dp"
                    android:textColor="@color/bg_clor"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                style="@style/textinputlayouttheme1">

                <EditText
                    android:id="@+id/content_prof_update_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@mipmap/icn_key_small"
                    android:drawablePadding="@dimen/size_10dp"
                    android:textColor="@color/bg_clor"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout


    style="@style/textinputlayouttheme1">

    <EditText
                    android:id="@+id/content_prof_update_loc_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    style="@style/edittextayouttheme1"


                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@mipmap/icn_key_small"
                    android:drawablePadding="@dimen/size_10dp"
                    android:textColor="@color/bg_clor"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/content_prof_update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_20dp"
                android:background="@drawable/roundedcornersyellow"

                style="@style/textviewStyle"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/size_22dp" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
